--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron": "^2.0.2",
     "electron-packager": "^12.1.0",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "mocha": "^5.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
