--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "ISC",
   "scripts": {
     "webpack": "webpack --config webpack.config.js",
-    "electron": "electron ."
+    "electron": "electron .",
+    "build": "electron-packager ./ dbclient32 --platform=win32 --arch=ia32 --ignore=\"\\.gitignore|src|.idea|webpack.config.js\""
   },
   "babel": {
     "presets": [
@@ -18,29 +19,34 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "electron": "^2.0.2",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^1.0.0",
     "electron-packager": "^12.1.0",
+    "eslint": "^5.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "mocha": "^5.2.0",
-    "node-sass": "^4.9.0",
+    "prettier": "^1.13.7",
     "sass-loader": "^7.0.3",
     "standard": "^11.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
+    "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "normalize.css": "^8.0.0",
-    "pg-promise": "^8.4.4",
+    "babel-polyfill": "^6.26.0",
+    "electron": "^2.0.4",
+    "pg-promise": "^8.4.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-select": "^1.2.1"
