--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
+    "node-sass": "^4.9.2",
     "prettier": "^1.13.7",
     "sass-loader": "^7.0.3",
-    "standard": "^11.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
